<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<packaging>pom</packaging>
	<groupId>org.osm2world</groupId>
	<artifactId>osm2world</artifactId>
	<version>0.5.0-SNAPSHOT</version>

	<modules>
		<module>core</module>
		<module>core-jvm</module>
		<module>core-web</module>
		<module>desktop</module>
		<module>opengl</module>
	</modules>

	<name>OSM2World</name>
	<description>OSM2World creates three-dimensional models of the world from OpenStreetMap data</description>
	<url>https://osm2world.org</url>
	<inceptionYear>2010</inceptionYear>

	<licenses>
		<license>
			<name>The MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/tordanik/osm2world/issues</url>
	</issueManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>topobyte-repo</id>
			<url>https://mvn.topobyte.de</url>
		</repository>
		<repository>
			<id>slimjars-repo</id>
			<url>https://mvn.slimjars.com</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.github.jinnovations</groupId>
				<artifactId>attribution-maven-plugin</artifactId>
				<version>0.9.9</version>
				<executions>
					<execution>
						<goals>
							<goal>generate-attribution-file</goal>
						</goals>
						<phase>generate-resources</phase>
					</execution>
				</executions>
				<configuration>
					<outputFile>${project.build.directory}/attribution.xml</outputFile>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
